--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Genaiguru-website for AI content and AI content Generation" />
+  <meta property="og:description" content="Genaiguru-website for AI content and AI content Generation" />
+  <meta property="og:title" content="Genaiguru-website" />
+  <meta property="og:url" content="" />
+  <meta property="og:type" content="website" />
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
