work on write with ai page and ui points

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Genaiguru-website" />
   <meta property="og:url" content="" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://images.pexels.com/photos/19790846/pexels-photo-19790846/free-photo-of-a-red-moped-parked-in-front-of-a-building.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  <!-- <meta property="og:image" content="https://images.pexels.com/photos/19790846/pexels-photo-19790846/free-photo-of-a-red-moped-parked-in-front-of-a-building.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" /> -->
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
